Test/errors/err_multi.cb
// Verifies that multiple expect_error blocks work in a single file.

expect_error("missing a return statement") {
    int bad_return(int x)
    {
        int y = x * 2;
    }
}

expect_error("nullable '?' is not allowed on primitive type 'int'") {
    int bad_nullable()
    {
        int? x = 0;
        return 0;
    }
}

expect_error("Undefined variable foo.") {
    int bad_ident()
    {
        return foo + 1;
    }
}

extern int main()
{
    return 0;
}
